# mcp-solver

./: .gitignore  CHANGELOG.md  INSTALL.md  LICENSE  README-PySAT.md  README-Z3.md  README-client.md  README-mzn.md  README.md  instructions_prompt.md  instructions_prompt_lite.md  instructions_prompt_mzn.md  instructions_prompt_pysat.md  instructions_prompt_pysat_lite.md  instructions_prompt_z3.md  instructions_prompt_z3_lite.md  pyproject.toml  pysat_constraints_demo.py  quick_prompt.md  run_all_tests.py  run_error_handling_tests.py  run_mzn_tests.py  run_pysat_tests.py  run_tests.py  run_z3_tests.py  test_function_templates.py  test_map_coloring.py  test_pysat_graph_coloring.py  test_pysat_pattern.py  test_pysat_solution_bug.py  test_us_states_coloring.py
docs/: maxsat_mode.md  pysat_variable_mapping_issue.md
examples/: example_casting.md  example_nqueens.md  example_tsp.md  example_university_schedule.md  maxsat_course_scheduling.py  pet_assignment_with_varmap.py  test_maxsat_simple.py
examples/z3_function_templates/: array_example.py  constraint_satisfaction_example.py  optimization_example.py  quantifier_example.py
minion/: .gitignore  LICENSE  README.md  pyproject.toml
minion/e2e_tests/: test_e2e.py  test_problems_e2e.py
minion/e2e_tests/runs/mcp_ipython/: config.json  task.md
minion/e2e_tests/runs/multi_step/: config.json  task.md
minion/e2e_tests/runs/no_tools/: config.json  task.md
minion/e2e_tests/runs/simple_add/: config.json  task.md
minion/src/mcp_minion/: __init__.py  agent.py  artifacts.py  cli.py  logging.py  mcp_client.py  test_mcp_server.py  tools.py
minion/tests/: test_agent.py  test_artifacts.py  test_cli.py  test_kernel.py  test_logging.py  test_mcp_client.py  test_system_prompt.py  test_tools.py
problems/mzn/: n_queens.md  sudoku.md
problems/pysat/: graph_coloring.md  scheduling.md
problems/z3/: bounded_sum.md  cryptarithmetic.md
prompts/asp/: instructions.md  review.md
prompts/maxsat/: instructions.md  review.md
prompts/mzn/: instructions.md  review.md
prompts/pysat/: instructions.md  review.md
prompts/z3/: instructions.md  review.md
scripts/: test-custom-agent.py  test-intermediate-steps.py  test_custom_agent.py  test_intermediate_steps.py
src/mcp_solver/: __init__.py  __main__.py  base_manager.py  constants.py  memo.py  model_manager.py  server.py  solution.py  solver.py  test_setup.py  types.py  validation.py
src/mcp_solver/agent/: __init__.py  cli.py  harness.py  mcp_server.py  runfolder.py
src/mcp_solver/asp/: __init__.py  environment.py  error_handling.py  model_manager.py  solution.py  test_setup.py
src/mcp_solver/client/: __init__.py  client.py  custom_agent.py  llm_factory.py  mcp_react_os.py  mcp_tool_adapter.py  react_agent.py  test_built_in_agent.py  test_client.py  test_client_mzn.py  test_client_pysat.py  test_client_z3.py  test_custom_agent.py  test_custom_react.py  test_improved_custom_agent.py  test_intermediate_steps.py  test_mcp_tools.py  test_setup.py  test_simple.py  token_callback.py  token_counter.py  token_tracker.py  tool_capability_detector.py  tool_stats.py
src/mcp_solver/core/: __init__.py  __main__.py  base_manager.py  base_model_manager.py  constants.py  prompt_loader.py  server.py  test_setup.py  validation.py
src/mcp_solver/helpers/: __init__.py  maxsat.py  pysat.py  z3.py
src/mcp_solver/maxsat/: __init__.py  constraints.py  environment.py  error_handling.py  model_manager.py  solution.py  test_setup.py
src/mcp_solver/mzn/: __init__.py  model_manager.py  test_setup.py
src/mcp_solver/pysat/: __init__.py  constraints.py  environment.py  error_handling.py  global_maxsat.py  model_manager.py  solution.py  test.py  test_setup.py  validation.py
src/mcp_solver/templates/: __init__.py  clingo.md  cpmpy.md  didp.md  maxsat.md  pysat.md  z3.md
src/mcp_solver/z3/: __init__.py  environment.py  model_manager.py  solution.py  test_property.py  test_setup.py
temp/: problems.json
tests/: README.md  __init__.py  conftest.py  run_all_tests.py  run_test.py  run_test_custom_agent.py  run_test_mzn.py  run_test_pysat.py  run_test_z3.py  run_tests.py  test_all_modes.py  test_config.py  test_environment_imports.py  test_function_template_basic.py  test_function_templates.py  test_global_maxsat.py  test_integration.py  test_intermediate_steps.py  test_mcp_map_coloring.py  test_mzn.py  test_pysat.py  test_pysat_basic.py  test_pysat_constraints.py  test_pysat_contradiction.py  test_pysat_direct_conditional.py  test_pysat_error_handling.py  test_pysat_model_validation.py  test_pysat_satisfiability.py  test_pysat_solution_export.py  test_subset_import.py  test_subset_template.py  test_templates.py  test_timeout_handling.py  test_validation.py  test_z3.py
tests/problems/asp/: birds_fly.md  company_controls.md  package_status_unsat.md  party_invitation.md  shift_assignment.md  simple_path_coloring.md  test.md  university_course_scheduling.md
tests/problems/clingo/: birds_fly.md  birds_fly_ground_truth.py  company_controls.md  company_controls_ground_truth.py  package_status_unsat.md  package_status_unsat_ground_truth.py  party_invitation.md  party_invitation_ground_truth.py  shift_assignment.md  shift_assignment_ground_truth.py  test.md
tests/problems/cpmpy/: carpet_cutting.md  carpet_cutting_ground_truth.py  tsp.md  tsp_ground_truth.py  university_scheduling.md  university_scheduling_ground_truth.py  university_scheduling_unsat.md  university_scheduling_unsat_ground_truth.py  zebra.md  zebra_ground_truth.py
tests/problems/didp/: knapsack.md  knapsack_ground_truth.py  talent_scheduling.md  talent_scheduling_ground_truth.py  tardiness.md  tardiness_ground_truth.py  tsptw.md  tsptw_ground_truth.py
tests/problems/maxsat/: equipment_purchase.md  equipment_purchase_ground_truth.py  feature_selection.md  network_monitoring.md  network_monitoring_ground_truth.py  package_selection.md  package_selection_ground_truth.py  simple_test.md  test.md  (+4 more)
tests/unit/: test_cli.py  test_didp_backend.py  test_helpers_maxsat.py  test_helpers_pysat.py  test_helpers_z3.py  test_mcp_server.py  test_runfolder.py
(+73 files in other folders)
