[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-minion"
version = "0.1.0"
description = "A minimal ReAct agent over MCP servers via OpenRouter"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Stefan Szeider", email = "stefan@szeider.net" },
]
requires-python = ">=3.13,<3.14"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "mcp>=1.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
mcp-minion = "mcp_minion.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_minion"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 88
fix = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501", # line length (formatter handles this)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"e2e_tests/*" = ["S101"]
"__init__.py" = ["F401"]
